--- a/index.html
+++ b/index.html
@@ -11,12 +11,37 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  <header>
-    
-  </header>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQwbxv7J9BwQG2171HO6jKptdyeuo416o&callback=initMap"  async defer></script>
-<script type="text/javascript" src="assets/js/jquery-3.2.1.min.js"></script>
-<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="assets/js/app.js"></script>
+  <head>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header flex-align-items-center">
+          <div class="col-xs-4">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          </div>
+          <div class="col-xs-4 col-sm-12 logo margin-14">
+            <img src="assets/image/logo.png" class="img-responsive" alt="">
+          </div>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li><a href="#">Viaja</a></li>
+            <li><a href="#">Conduce</a></li>
+            <li><a href="#">Inicia Sesión</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+  </head>
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQwbxv7J9BwQG2171HO6jKptdyeuo416o&callback=initMap"  async defer></script> -->
+  <script type="text/javascript" src="assets/js/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="assets/js/app.js"></script>
 </body>
 </html>
