avance de hero imagen de fondo

--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
       </div><!-- /.container-fluid -->
     </nav>
   </head>
+  <section  id="hero" class="container-fluid">
+    <!-- <img src="assets/image/taxi.jpg" alt="taxi"> -->
+    <div class="row">
+      <div class="col-xs-9 col-xs-offset-3 col-sm-6 hero-cont">
+        <h1>Comienza a viajar con</h1>
+        <img src="assets/image/logo-blanco.png" alt="logo labcar blanco">
+      </div>
+    </div>
+  </section>
   <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQwbxv7J9BwQG2171HO6jKptdyeuo416o&callback=initMap"  async defer></script> -->
   <script type="text/javascript" src="assets/js/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
